2007-10-14  Brandon Hale <brandon@brandonhale.us>

	Patch from Thomas Wendt on bug #483359.
	Support the latest last.fm protocols for playlists and scrobbling
	tracks. This adds or changes a good bit of code, so please test away.

2007-10-14  Yannig Marchegay  <yannig@marchegay.org>

	* configure.ac: Added 'oc' to ALL_LINGUAS.

2007-09-08  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

        * configure.ac: Added es to ALL_LINGUAS

2007-09-08  Brandon Hale  <brandon@brandonhale.us>

	* src/TrayIcon.cs, src/PlayerWindow.cs:
	Patch from Lukaz on bug #466666. 
	Support volume changing by moving the scroll wheel 
	over the tray icon.

2007-09-03  Ilkka Tuohela  <hile@iki.fi>

	* configure.ac: Added fi to ALL_LINGUAS

2007-09-31  Baris Cicek <baris@teamforce.name.tr>

	* MAINTAINERS: Updated according to the GNOME convention

2007-06-14  Pema Geyleg <pema.geyleg@gmail.com>

	* configure.ac: Added dz to ALL_LINGUAS

2007-05-22  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* configure.ac: Added fr to ALL_LINGUAS

2007-05-16  David Lodge <dave@cirt.net>

	* configure.ac: Added en_GB to ALL_LINGUAS

2007-04-21  Brandon Hale  <brandon@brandonhale.us>
	
	* src/Driver.cs:
	Null check on dbus_remote before calling RegisterObject.
	I am not sure this fixes my bug, but it certainly doesn't hurt.

2007-04-21  Baris Cicek <baris@teamforce.name.tr>

	* Driver.cs:
	Handles BusG.Init() exception so that last-exit still works
	even though Dbus does not exists. 

2007-04-21  Brandon Hale  <brandon@brandonhale.us>
	
	* configure.ac, liblast-exit/player.cs:
	Patch from Baris on #430751.
	Improved handling of buffering, requires gstreamer 0.10.11 or better

2007-04-20  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>

	* configure.ac: added "ca" to ALL_LINUAS.

2007-04-14  Brandon Hale  <brandon@brandonhale.us>

	* dbus-sharp/:
	Update to dbus-sharp 0.4.2

	* src/TagView.cs, src/TagSelector.cs, po/POTFILES.in:
	One more l10n patch from Lukasz on bug #428933.
